--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://anand-00281.github.io/anand-portfolio/",
+  "homepage": "https://anand-00281.github.io/anand-portfolio",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
